k8s/mysql-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: express-mysql
  labels:
    name: express-mysql
spec:
  containers:
  - name: mysql
    image: mysql:latest
    ports:
    - name: mysql
      containerPort: 3306
      protocol: TCP
    volumeMounts:
    - name: express-mysql-storage
      mountPath: /var/lib/mysql
  volumes:
  - name: express-mysql-storage
    emptyDir: {}
