k8s/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    name: mysql-service
spec:
  ports:
  - port: 3306
  selector:
    name: express-mysql
  type: ClusterIP
