k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: express-service
spec:
  type: NodePort
  selector:
    app: express-hello-app
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 3000
