k8s/express-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: express-ingress
  
spec:
  rules:
    - host: express-app.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: express-service
                port:
                  number: 4000
